Stage version of Rewards V2 (#12)
* Preliminary CometRewardsV2 functionality with MerkleProof

* feat: restructorized contract storage, fixed all compilaion errors

* fix: multiple assets compaign

* fix: compaigns functionality

* feat: Add finishAccrued and startAccrued bug fix (#5)

* feat: claimed calculation fix

* feat: claimed calculation fix

* feat: add CometRewards V1 interaction

* wip: tests and new contract version

* wip: contract update with more tests

* wip: new contract update and revert changes to CometRewards

* wip: cover most of the contract and fix some bugs

* wip: coverage improvement

* feat: complited contract changes and test coverage

* feat: remove package-lock

* feat: set yarn file to the main branch version

* feat: update yarn file

--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@flashbots/ethers-provider-bundle": "^0.5.0",
+    "@openzeppelin/merkle-tree": "^1.0.6",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "deep-object-diff": "^1.1.9",
     "jest-diff": "^27.4.2",
+    "solidity-coverage": "^0.8.11",
     "undici": "^5.21.2"
   },
   "devDependencies": {
